--- a/style.css
+++ b/style.css
@@ -5,9 +5,9 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
-body{
-    margin: 0;
-}
+body, html {
+    overflow-x: hidden;
+  }
 .container{
     width: 1300px;
     margin: 0 auto;
