--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
 }
-
+body, html{
+    overflow: hidden;
+}
 .container{
     width: 1300px;
     margin: 0 auto;
