--- a/index-rpsv.css
+++ b/index-rpsv.css
@@ -1,290 +1,195 @@
-@media screen and (max-width:992px){
-    .container { 
-        width: 992px; 
-        margin: 0px auto; 
-    }
-    .sub-container {
-        width: 990px;
+@media screen and (max-width: 480px){
+    .container{
+        width: 100%;
         margin: 0 auto;
     }
-    .header-container{
-        width: 992px;
-        padding: 0px 15px;
+    .header-area{
     }
-    .menu-item li{
-        margin: 0px 22px;
-        font-size: 15px;
+    .header-container{
+        max-width: 100%;
+    }
+    .header-menu{
+        display: none;
+    }
+    .header-icon{
+        
+    }
+    .header-search{
+        
+    }
+    .search-item img{
+        
+        width: 20px;
+    }
+    .search-item{
+    }
+    .search-item li{
+    }
+    .hero{
+        width: 100%;
     }
     .cetagory-heading{
-        
-        margin-top: 2rem;
-    }
-    .cetagory{
-        margin-top: 2rem;
-        grid-gap: 2rem;
-        padding: 0rem 1rem;
-    }
-    .cetagory-card{
-        width: 100%;
-    }
-    .cetagory-card img{
-        width: 100%;
-    }
-    .product-heading {
-        margin-top: 2rem;
-    }
-    .product{
-        display: grid;
-        grid-template-columns: repeat(3, minmax(0, 1fr));
-        grid-gap: 1rem;
-        padding: 0rem 1rem;
-    }
-    .product-card{
-        width: 100%;
-    }
-    .product-img img {
-        width: 100%;
-        height: 35vh;
-    }
-    .product-btn{
-        margin-top: 2.5rem;
-        margin-bottom: 5rem;
-    }
-    .room-img img{
-        width: 95%;
-        padding-left: 1rem;
-    }
-    .room-details{
-        
-    }
-    .room-img{
-    grid-gap: 0rem;
-    }
-    .gallery{
-        margin-top: 4rem;
-    }
-    .number4{
-        padding-right: 6rem;
-    }
-    .number3{
-        margin-left: 4rem;
-    }
-    .number1{
-        margin-left: 4rem;
-    }
-    .number2{
-        margin-left: 7rem;
-    }
-    .number5{
-        margin-left: 9.5rem;
-    }
-    .number6 {
-        margin-left: 3rem;
-    }
-    .number7{
-    padding-right: 5rem;
-    }
-    .grid-item img{
-    }
-}
-@media screen and (max-width:768px){
-
-}
-
-
-
-@media screen and (max-width: 480px) {
-    .container { 
-        width: 475px; 
-        margin: 0px auto; 
-    }
-    .sub-container {
-        width: 475px;
-        
-    }
-    .hero img{
-     width: 100%;
-    }
-    .cetagory-heading {
-        text-align: center;
         margin-top: 2rem;
         margin-bottom: 2rem;
     }
-    .cetagory-heading h3 { 
-        font-size: 25px; 
-        color: rgb(51, 51, 51); 
+    .header-icon-heading h3{
+        font-size: 25px;
     }
-    .cetagory-heading p { 
-        color: rgb(102, 102, 102); 
+    .cetagory-heading p{
+        margin: 0;
         font-size: 13px;
     }
-    .cetagory-card {
-        margin: 0 auto;
-        text-align: center;
+    .header-icon-image img{
+        width: 42px;
+        margin-top: 4px;
     }
-    .cetagory-card img {
-        width: 90%;
-        height: 35vh;
+    .hero-area{
+        width: 100%;
     }
-    .cetagory-card h5 {
+    .cetagory-heading h3{
+        margin: 0;
+        font-size: 25px;
+    }
+    .cetagory{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+    }
+    .cetagory-card img{
+     width: 100%;
+    }
+    .cetagory-card h5{
+        margin-top: 0;
         font-size: 20px;
-        margin-top: 5px;
-        margin-bottom: 25px;
-    }
-    .cetagory {
-        display:block;
-    }
-    .cetagory-area {
-        margin: 0 auto
     }
     .product-heading h2{
-        font-size: 28px;
-        margin-bottom: 1.5rem;
+        font-size: 30px;
+        margin-bottom: 1rem;
     }
     .product{
         display: grid;
         grid-template-columns: repeat(2, minmax(0, 1fr));
-        grid-gap: 12px;
-        margin-bottom: 1.5rem;
+        gap: 1rem;
+        padding: 0rem 1rem;
     }
     .product-card{
-        margin: 0 auto;
         width: 100%;
     }
-    .product-img img{
-        width: 100%;
-        height: 25vh;
+    .product-details h5{
+        margin: 0;
+        font-size: 20px;
+    }
+    .product-details p{
+        margin: 0;
+    }
+    .product-price strong{
+        font-size: 15px;
+    }
+    .product-price span{
+        font-size: 11px;
+        margin-left: 22px;
     }
     .product-btn{
-        margin-bottom: 4rem;
+        padding: 2rem 0rem;
     }
-    .header-container{
-        width: 470px;
+    .product-btn a{
+        border: 1px solid #B88E2F;
     }
-    .header-menu{
-        display:none;
-    }
-    .grid{
-        margin-top: 1rem;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        padding: 0rem 1rem;
-    }
-    .gallery{
-        margin-top: 3rem;
-    }
-    .grid-item{
-        margin: 0;
-        width: 100%;
-    }
-    .grid-item img{
-        width: 100%;
-    }
-    .footer-left{
-        padding: 0rem 1rem;
-    }
-    .footer-left-list li{
-        padding-bottom: 25px;
-    }
-    .footer-right-list li {
-        padding-bottom: 25px;
-    }
-    .header-icon-heading h3{
-        font-size: 30px;
-    }
-    .search-item li{
-        margin: 0px 10px;
-        padding-top: 8px;
-    }
-    .header-icon-image img{
-        width: 50px;
-    }
-    .search-item img{
-        width: 22px;
-    }
-    .room-img{
-        display: block;
-    }
-    .room-img img{
-        width: 14rem;
-        height: 27vh;
+    .room-area{
+        margin: 2rem 0rem;
     }
     .room-details h3{
-        font-size: 25px;
-        line-height: 2rem;
-    }
-    .room{
-        padding: 10px 10px;
-    }
-    .room-details{
-        width: 100%;
+        font-size: 30px;
+        margin: 0;
     }
     .room-details p{
         font-size: 13px;
-        margin-top: 23px;
     }
-    .room-details a{
-        padding: 8px 26px;
-        font-size: 14px;
+    .room-details{
+        width: 150%;
     }
-    .gallery h1{
-        font-size: 28px;
+    .room-img{
+        display: block;
+        padding-left: 3rem;
+    }
+    .room-img img{
+        width: 100%;
+    }
+    .gallery{
+        
+padding: 0rem 1rem;
     }
     .gallery p{
-        font-size: 13px;
+        margin: 0;
+        margin-top: 2rem;
     }
-    .footer-right{
-    margin-left: 15px;
+    .gallery h1{
+        margin: 0;
+        font-size: 30px;
     }
-    .footer-right-input{
-    margin: 1rem 0rem 2rem 0rem;
+    .grid{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        margin-top: 2rem;
     }
-    .footer-right-input p{
-        margin-left: 1.5rem;
-    }
-    .footer-middle-left{
-    }
-    .footer{
-        display: block;
-        padding-left: 2rem;
-    }
-    .footer-left p{
-        margin-top: 5px;
-    }
-    .footer-middle{
-        padding: 2rem 1rem 1rem 1rem;
+    .number5{
+        margin: 0;
     }
     .number4{
-        padding-right: 0;
+        padding: 0;
     }
-    .number7{
-        padding-right: 0;
+    .number2{
+        margin: 0;
+        margin-top: 12rem;
     }
-    .product-btn a{
+    .number3{
+        margin: 0;
+    }
+    .number6{
+        margin: 0;
+    }
+    .number1{
+        margin: 0;
+        padding-left: 5rem;
+    }
+    .footer-left h3{
+        margin: 0;
+    }
+    .footer-left p{
+        margin: 4px 0px;
         font-size: 12px;
-        padding: 9px 70px;
     }
-    .product-price span{
-        margin-left: 0;
-        display: block;
-        font-size: 11px;
+    .footer{
+        display: flex;
+        flex-direction: column;
     }
-    .product-details h5{
-        font-size: 18px;
+    .footer-left{
+        padding: 0rem 2.5rem;
     }
-    .product-details p{
-        font-size: 12px;
-        padding: 3px 0px;
+    .footer-right{
+        padding: 0rem 2.5rem;
+        margin-bottom: 1rem;
     }
-    .product-price strong{
-        font-size: 14px;
+    .footer-right p{
+        margin: 0;
+    }
+    .footer-right-input{
+        margin: 12px 0px;
+    }
+    .footer-right-input p{
+        margin-left: 2rem;
+    }
+    .footer-right-input input{
+        width: 9rem;
     }
     .footer-area{
-        padding-top: 2rem;
-        padding-bottom: 0.5rem;
+        padding-bottom: 0;
     }
     .craetor p{
-        padding-bottom: 10px;
-        padding-top: 5px;
+        margin: 0;
+        padding: 0;
+        font-size: 10px;
+        padding: 8px 0px;
     }
 }
