--- a/style.css
+++ b/style.css
@@ -1,18 +1,17 @@
 /* Fixed CSS */
-*{
+body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
+    
 }
 .container{
-    width: 1300px;
+    max-width: 1300px;
     margin: 0 auto;
+    overflow-x: hidden;
 }
-.sub-container{
-    width: 1200px;
-    margin: 0 auto;
-}
+
 /* Fixed CSS */
 
 
