--- a/index-rpsv.css
+++ b/index-rpsv.css
@@ -1,3 +1,398 @@
+@media screen and (max-width: 1200px){
+    .product-price span{       
+        font-size: 12px;       
+        margin-left: 1.5rem;
+    }
+    .craetor p{
+        margin: 0;
+        padding: 1rem 0rem;
+    }
+}
+
+
+
+
+@media screen and (max-width: 992px){
+    .header-container{  
+          width: 100%;
+      }
+      .header-icon-image img{
+          width: 2.5rem;
+          padding-left: 8px;
+      }
+      .header-icon-heading h3{
+          margin: 0;
+      }
+      .menu-item li a{
+          font-size: 15px;
+      }
+      .search-item img{
+          width: 24px;
+      }
+      .search-item{
+          padding-left: 1rem;
+      }
+      .cetagory-heading{
+          margin: 2rem 0rem;
+      }
+      .cetagory-heading h3{
+          margin: 0;
+      }
+      .cetagory-heading p{
+          margin: 0;
+      }
+      .cetagory-card{
+          width: 100%;
+      }
+      .cetagory-card img{
+          width: 100%;
+      }
+      .cetagory{
+          gap: 1.5rem;
+          padding: 0rem 1.5rem;
+      }
+      .cetagory-card h5{
+          margin: 5px 0px;
+          font-size: 21px;
+      }
+      .product-heading h2{
+          font-size: 32px;
+      }
+      .product{
+          gap: 1rem;
+          padding: 0rem 1rem;
+      }
+      .product-card{
+          width: 100%;
+      }
+      .product-details h5{
+          margin: 0;
+      }
+      .product-details p{
+          margin: 0;
+      }
+      .product-price span{
+          margin: 0;
+          font-size: 13px;
+          padding-left: 9px;
+      }
+      .product-btn{
+          margin: 0;
+          padding: 1rem 0rem;
+          margin-top: 1rem;
+          margin-bottom: 4rem;
+      }
+    .number1{
+        
+margin-left: 5rem;
+    }
+    .number2{
+        
+margin-left: 8rem;
+    }
+    .number3{
+        
+    }
+    .number4{
+        
+padding-right: 6rem;
+    }
+    .number5{
+        
+margin-left: 10.5rem;
+    }
+    .number6{
+        
+    }
+    .number7{
+        
+    }
+  }
+
+
+
+
+@media screen and (max-width: 900px){
+    .menu-item{
+        
+padding-left: 18px;
+    }
+    .menu-item li{
+        
+margin: 0px 26px;
+    }
+    .search-item{
+        padding: 0;
+    }
+    .search-item li{
+        margin: 0px 13px;
+    }
+}
+
+
+
+
+@media screen and (max-width: 768px){
+    .container{
+        width: 100%;
+        margin: 0 auto;
+    }
+    .header-container{
+        max-width: 100%;
+    }
+    .header-icon-image img{
+        width: 87%;
+    }
+    .header-icon-image{ 
+        width: 40px;
+        height: auto;
+    }
+    .header-icon-heading h3{
+        font-size: 27px;
+        margin-left: 10px;
+    }
+    .menu-item li a{
+        font-size: 13px;
+    }
+    .menu-item li{
+        margin: 0px 17px;
+    }
+    .search-item li{
+        margin: 0px 12px;
+    }
+    .search-item img{
+        width: 18px;
+    }
+    .search-item{
+        padding-left: 0px;
+    }
+    .cetagory-heading h3{
+        margin: 0rem 0rem;
+        font-size: 28px;
+    }
+    .cetagory-heading{
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+    }
+    .cetagory-heading p{
+        margin: 0rem 0rem;
+        font-size: 15px;
+    }
+    .cetagory{
+        grid-gap: 1.5rem;
+        padding: 0rem 1rem;
+    }
+    .cetagory-card{
+        width: 100%;
+    }
+    .cetagory-card img{
+        width: 100%;
+    }
+    .cetagory-card h5{
+        margin: 0;
+        margin-top: 8px;
+        font-size: 20px;
+    }
+    .product-heading h2{
+        font-size: 30px;
+        margin-bottom: 18px;
+    }
+    .product{
+        display: grid;
+        grid-template-columns: repeat(3, minmax(0, 1fr));
+        gap: 1rem;
+        padding: 0rem 1rem;
+    }
+    .product-card{
+        width: 100%;
+    }
+    .product-img{
+        width: 100%;
+    }
+    .product-details h5{
+        margin: 0px;
+        font-size: 20px;
+    }
+    .product-details p{
+        margin: 0;
+    }
+    .product-price span{
+        margin: 0px;
+        font-size: 12px;
+        padding-left: 11px;
+    }
+    .product-btn{
+        padding: 2rem 0rem;
+    }
+    .room-area{
+        margin-top: 2.5rem;
+    }
+    .room-details{
+        width: 65%;
+    }
+    .room-details h3{
+        margin: 0;
+        font-size: 27px;
+    }
+    .room-details p{
+    font-size: 13px;
+    }
+    .room-img{
+        width: 100%;
+        height: auto;
+        gap: 1rem;
+        padding-left: 3rem;
+    }
+    .room-img img{
+        width: 100%;
+    }
+    .room-details a{
+        font-size: 14px;
+    }
+    .furniture-gallery{
+        margin-top: 4rem;
+    }
+    .gallery p{
+        margin: 0;
+    }
+    .gallery h1{
+        margin: 0;
+        font-size: 32px;
+    }
+    .grid{
+        margin-top: 2rem;
+    }
+    .number1{
+        margin-left: 2rem;
+    }
+    .number2{
+        margin-left: 5rem;
+    }
+    .number3{
+        margin-left: 3rem;
+    }
+    .number4{
+        padding-right: 3rem;
+    }
+    .number5{
+        margin-left: 4rem;
+        width: 100%;
+    }
+    .number6{
+        margin-left: 3rem;
+    }
+    .footer-area{
+        padding-bottom: 0;
+    }
+    .footer-left h3{
+        margin: 0;
+        margin-top: 5px;
+    }
+    .footer-left p{
+        margin-top: 1rem;
+        font-size: 12px;
+    }
+    .footer-left-list li{
+        font-size: 13px;
+    }
+    .footer-right-list li{
+        font-size: 13px;
+    }
+    .footer-right{
+        padding-left: 3rem;
+    }
+    .footer-right-input{
+        flex-direction: column;
+    }
+    .footer-right-input input{
+        width: 9rem;
+        height: 25px;
+    }
+    .footer-right p{
+        font-size: 13px;
+        margin: 1px;
+        margin-top: 12px;
+        width: 67px;
+    }
+    .craetor p{
+        margin: 0;
+        padding: 12px 0px;
+        font-size: 12px;
+    }
+    .footer-left{
+        padding: 0rem 2rem;
+    }
+    .footer-left-list{
+        padding: 0;
+    }
+    .footer-right-list{
+        padding: 0;
+    }
+}
+
+
+
+
+@media screen and (max-width: 670px){
+    .header-container{    
+        width: 100%;
+    }
+    .search-item li{   
+        margin: 0px 8px;
+    }
+    .menu-item{
+        padding: 0px 0px;
+    }
+    .search-item img{
+        width: 20px;
+    }
+    .footer-left-list{
+        
+padding-left: 0;
+    }
+    .footer-right-list{
+        
+padding: 0;
+    }
+    .footer-right{
+        padding-left: 1rem;
+    }
+}
+
+
+
+
+@media screen and (max-width: 576px){
+    .header-menu{       
+        display: none;
+    }
+    .search-item li{
+        margin: 0px 13px;
+    }
+    .search-item img{
+        width: 20px;
+    }
+    .room-details{  
+        padding: 0;
+    }
+    .footer-left-list li{
+        
+padding-bottom: 1.5rem;
+    }
+    .footer-right-list li{
+        padding-bottom: 1.5rem;
+    }
+    .footer-right-input{
+        margin-top: 1.2rem;
+    }
+    .footer-left{
+        padding: 0rem 2rem;
+    }
+}
+
+
+
+
 @media screen and (max-width: 480px){
     .container{
         width: 100%;
@@ -10,12 +405,6 @@
     }
     .header-menu{
         display: none;
-    }
-    .header-icon{
-        
-    }
-    .header-search{
-        
     }
     .search-item img{
         
@@ -34,13 +423,14 @@
     }
     .header-icon-heading h3{
         font-size: 25px;
+        padding: 0;
     }
     .cetagory-heading p{
         margin: 0;
         font-size: 13px;
     }
     .header-icon-image img{
-        width: 42px;
+        width: 34px;
         margin-top: 4px;
     }
     .hero-area{
@@ -87,8 +477,8 @@
         font-size: 15px;
     }
     .product-price span{
-        font-size: 11px;
-        margin-left: 22px;
+        font-size: 10px;
+        margin-left: 3px;
     }
     .product-btn{
         padding: 2rem 0rem;
@@ -116,9 +506,8 @@
     .room-img img{
         width: 100%;
     }
-    .gallery{
-        
-padding: 0rem 1rem;
+    .gallery{    
+        padding: 0rem 1rem;
     }
     .gallery p{
         margin: 0;
@@ -178,7 +567,7 @@ padding: 0rem 1rem;
         margin: 12px 0px;
     }
     .footer-right-input p{
-        margin-left: 2rem;
+    padding-top: 10px;
     }
     .footer-right-input input{
         width: 9rem;
@@ -191,5 +580,8 @@ padding: 0rem 1rem;
         padding: 0;
         font-size: 10px;
         padding: 8px 0px;
+    }
+    .footer-left-list{
+        padding-left: 2.5rem;
     }
 }
