--- a/style.css
+++ b/style.css
@@ -19,11 +19,10 @@ body{
 /* header section */
 .header-area{}
 .header-container {
-    width: 1215px;
+    width: 95%;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    height: 8vh;
     align-items: center;
 }
 .header-icon{
@@ -35,13 +34,15 @@ body{
 .header-icon-image img{
     margin-top: 8px;
     padding-right: 5px;
-    width: 100%;
+    width: 90%;
 }
 .header-icon-heading{}
 .header-icon-heading h3{
     display: inline-block;
     font-size: 33px;
-    font-family: "Montserrat", sans-serif;}
+    font-family: "Montserrat", sans-serif;
+    padding-left: 5px;
+}
 .header-menu{
 }
 .menu-item{
@@ -92,21 +93,28 @@ body{
     margin-top: 3rem;
     margin-bottom: 3rem;
 }
-.cetagory-heading h3{font-size: 30px;color: #333333;}
-.cetagory-heading p{
-    color: #666666;
+.cetagory-heading h3 {
+    font-size: 30px;
+    color: #333333;
+    margin: 0;
 }
-.cetagory{
+.cetagory-heading p {
+    color: #666666;
+    margin: 0;
+}
+.cetagory {
     display: grid;
     grid-template-columns: repeat(3, minmax(0, 1fr));
     gap: 53px;
+    padding: 0rem 1rem;
 }
-.cetagory-card{
-    width: 24rem;
+.cetagory-card {
+    width: 100%;
     box-sizing: border-box;
 }
 .cetagory-card img {
     border-radius: 10px;
+    width: 100%;
 }
 .cetagory-card h5{
     color: #333333;
@@ -184,77 +192,11 @@ body{
 
 
 /* footer section */
-.footer-area{
-    padding-bottom: 1.5rem;
-    padding-top: 3rem;
-    border-top: 2px solid #e9e9e9;
-}
-.footer{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 10px;
-    border-bottom: 2px solid #e9e9e9;
-}
-.footer-left{
-    padding: 0rem 4rem;
-}
-.footer-left h3{
-    font-size: 22px;
-}
-.footer-left p{
-    color: #9F9F9F;
-    font-size: 12px;
-    margin-top: 2.5rem;
-}
-.footer-middle{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    /* padding-left: 4rem; */
-}
-.footer-middle-left{}
-.footer-left-list{
-    list-style: none;
-    font-size: 12px;
-    font-weight: 500;
-}
-.footer-left-list li{
-    padding-bottom: 2rem;
-}
-.footer-middle-right{}
-.footer-right-list{
-    list-style: none;
-    font-size: 12px;
-    font-weight: 500;
-}
-.footer-right-list li{
-    padding-bottom: 2rem;
-}
-.footer-right{}
-.footer-right p{
-    font-size: 12px;
-    font-weight: 500;
-    color: #9F9F9F;
-}
-.footer-right-input{
-    display: flex;
-    margin-top: 1.5rem;
-}
-.footer-right-input input{
-    border: none;
-    border-bottom: 1px solid black;
-    font-size: 12px;
-    width: 10rem;
-}
-.footer-right-input p{
-    color: black;
-    margin-left: 1rem;
-    border-bottom: 1px solid black;
-}
-.first-link{
-    color: #9F9F9F;
-}
-.craetor{}
-.craetor p{padding-bottom: 1.5rem;font-size: 12px;}
+
+
+
+
+
 /* footer section */
 
 
@@ -268,14 +210,15 @@ body{
     font-size: 35px;
     margin-bottom: 2rem;
 }
-.product{
+.product {
     display: grid;
     grid-template-columns: repeat(4, minmax(0, 1fr));
     gap: 2rem;
+    padding: 0rem 1rem;
 }
 .product-card {
     background: #F4F5F7;
-    width: 18rem;
+    width: 100%;
     border-radius: 3px 3px 6px 6px;
     overflow: hidden;
 }
@@ -291,8 +234,15 @@ body{
     font-size: 22px;
     color: #3A3A3A;
     font-weight: 600;
+    margin: 0;
 }
-.product-details p{color: #898989;font-size: 13px;font-weight: 500;padding: 7px 0px;}
+.product-details p{
+    color: #898989;
+    font-size: 13px;
+    font-weight: 500;
+    padding: 7px 0px;
+    margin: 0;
+}
 .product-price{}
 .product-price strong {
     color: #3A3A3A;
@@ -302,13 +252,10 @@ body{
     color: #B0B0B0;
     margin-left: 45px;
 }
-.product-btn{
-    text-align: center;
-    margin-top: 2.5rem;
-}
 .product-btn {
     text-align: center;
-    margin-bottom: 6rem;
+    padding-top: 2rem;
+    padding-bottom: 6rem;
 }
 .product-btn button{}
 .product-btn a{
@@ -338,14 +285,18 @@ body{
     align-items: center;
     justify-content: center;
 }
-.room-details{width: 27rem;}
-.room-details h3{
+.room-details {
+    width: 65%;
+    padding-right: 3rem;
+}
+.room-details h3 {
     font-size: 35px;
     line-height: 2.8rem;
     color: #3A3A3A;
+    margin: 0;
 }
 .room-details p{
-    font-size: 14px;
+    font-size: 15px;
     color: #616161;
     margin-top: 10px;
     margin-bottom: 2rem;
@@ -360,7 +311,7 @@ body{
 }
 .room-img{}
 .room-img img{
-    width: 20rem;
+    width: 100%;
 }
 .room-img, .img-1{
 }
@@ -368,6 +319,7 @@ body{
     display: grid;
     grid-template-columns: repeat(2, minmax(0, 1fr));
     gap: 2rem;
+    width: 100%;
 }
 /* room area */
 
@@ -380,13 +332,15 @@ body{
 .gallery{
     text-align: center;
 }
-.gallery p{
+.gallery p {
     font-size: 14px;
     font-weight: 600;
     color: #616161;
+    margin: 0;
 }
-.gallery h1{
+.gallery h1 {
     font-size: 35px;
+    margin: 0;
     color: #3A3A3A;
 }
 .grid{
@@ -439,7 +393,6 @@ body{
 
 /* footer section */
 .footer-area{
-    padding-bottom: 1.5rem;
     padding-top: 3rem;
     border-top: 2px solid #e9e9e9;
 }
@@ -495,11 +448,13 @@ body{
     display: flex;
     margin-top: 1.5rem;
 }
-.footer-right-input input{
+
+.footer-right-input input {
     border: none;
     border-bottom: 1px solid black;
-    font-size: 13px;
-    width: 10.5rem;
+    font-size: 12px;
+    width: 10rem;
+    height: 34px;
 }
 .footer-right-input p{
     color: black;
@@ -511,9 +466,10 @@ body{
 }
 .craetor{}
 .craetor p {
-    padding-bottom: 1.5rem;
     font-size: 14px;
     text-align: center;
+    margin: 0;
+    padding: 1rem 0rem;
 }
 /* footer section */
 
