--- a/style.css
+++ b/style.css
@@ -216,7 +216,59 @@ body{
     gap: 2rem;
     padding: 0rem 1rem;
 }
+.overlay{
+    position: absolute;
+    top: 0px;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #413d3dbd;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+}
+.overlay-btn {
+    text-align: center;
+    padding-top: 11rem;
+    padding-bottom: 10px;
+}
+.overlay-btn > button{
+    padding: 15px 59px;
+    background: #fff;
+    border: none;
+    border-radius: 3px;
+    font-weight: bold;
+    font-family: 'Poppins', sans-serif;
+    color: #B88E2F;
+    transition: all 0.3s;
+
+}
+.overlay-btn > button:hover {
+    background: #B0B0B0;
+    color: #2b2b2b;
+    cursor: pointer;
+}
+.overlay-action{}
+.overlay-item{
+    display: flex;
+    justify-content: center;
+    padding: 0;
+}
+.overlay-item > li {
+    list-style: none;
+    padding: 0px 10px;
+    color: #fff;
+    font-weight: 500;
+}
+.overlay-item > li > a {
+    color: #fff;
+    text-decoration: none;
+    padding-left: 4px;
+}
+.product-card:hover .overlay{
+    opacity: 1;
+}
 .product-card {
+    position: relative;
     background: #F4F5F7;
     width: 100%;
     border-radius: 3px 3px 6px 6px;
